@@ -1,3 +1,10 @@
+2024-07-26  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev.el: bumped the version.
+
+	* eev-videolinks.el (ee-1stclassvideos-info): new video:
+	"2024lean4of0".
+
 2024-07-25  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-blinks.el (ee-symbol-function): added a test for (fboundp
